[package]
name = "server_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.43", features = ["full"] }

prost = "0.13"
tonic = { version = "0.12", features = ["tls"] }
tower = {  version = "0.5", features = ["util"] }

serde = { version = "1.0", features = ["derive"] }
ulid = "1.1"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "derive", "chrono"] }

anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
